components/policies/best-practices/ban-default-namespace/test/configmap-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: badconfigmap01
  namespace: default
data:
  key: "value"
---
