components/policies/best-practices/ban-default-namespace/test/configmap-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: goodconfigmap01
  namespace: some-namespace
data:
  key: "value"
---
