components/policies/best-practices/ban-default-namespace/test/job-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob01
  namespace: default
spec:
  template:
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
