components/policies/best-practices/ban-default-namespace/test/job-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob01
  namespace: some-namespace
spec:
  template:
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
