components/policies/best-practices/ban-default-namespace/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: some-namespace
spec:
  containers:
    - name: container01
      image: dummyimagename
---
